Remove old files, update to add username for better file name handling

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ outputs/*
 # Logs
 # logs/
 # *.log
-
+.claude/
 # LaTeX
 *.aux
 *.log
@@ -52,6 +52,8 @@ outputs/*
 *.fls
 *.fdb_latexmk
 *.synctex.gz
+
+claude.md
 
 # IDE
 .vscode/
