--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_KEY=your_openai_key_here
 GEMINI_API_KEY=your_gemini_key_here
 ANTHROPIC_API_KEY=your_claude_key_here
 MAX_FILE_SIZE=10485760
+DEFAULT_USER_NAME=User
