--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,16 @@
 OPENAI_API_KEY=your_openai_key_here
 GEMINI_API_KEY=your_gemini_key_here
 ANTHROPIC_API_KEY=your_claude_key_here
+
+# AI Model Configuration
+# OpenAI Models: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
+OPENAI_MODEL=gpt-4o-mini
+
+# Gemini Models: gemini-2.0-flash-exp, gemini-1.5-pro, gemini-1.5-flash
+GEMINI_MODEL=gemini-2.0-flash-exp
+
+# Claude Models: claude-3-5-sonnet-20241022, claude-3-5-haiku-20241022, claude-3-opus-20240229
+CLAUDE_MODEL=claude-3-5-haiku-20241022
+
 MAX_FILE_SIZE=10485760
 DEFAULT_USER_NAME=User
