--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ ANTHROPIC_API_KEY=your_claude_key_here
 # OpenAI Models: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
 OPENAI_MODEL=gpt-4o-mini
 
-# Gemini Models: gemini-2.0-flash-exp, gemini-1.5-pro, gemini-1.5-flash
-GEMINI_MODEL=gemini-2.0-flash-exp
+# Gemini Models: gemini-2.5-flash, gemini-2.0-flash-exp, gemini-1.5-pro, gemini-1.5-flash
+GEMINI_MODEL=gemini-2.5-flash
 
-# Claude Models: claude-3-5-sonnet-20241022, claude-3-5-haiku-20241022, claude-3-opus-20240229
-CLAUDE_MODEL=claude-3-5-haiku-20241022
+# Claude Models: claude-haiku-4-5-20251001, claude-3-5-sonnet-20241022, claude-3-5-haiku-20241022, claude-3-opus-20240229
+CLAUDE_MODEL=claude-haiku-4-5-20251001
 
 MAX_FILE_SIZE=10485760
 DEFAULT_USER_NAME=User
