--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -78,6 +78,7 @@ rich==14.2.0
 rsa==4.9.1
 scikit-learn==1.7.2
 scipy==1.16.3
+sentence-transformers==3.3.1
 setuptools==80.9.0
 shellingham==1.5.4
 smart_open==7.4.4
