--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+/lib/
+/lib64/
 parts/
 sdist/
 var/
@@ -26,6 +26,11 @@ env/
 ENV/
 env.bak/
 venv.bak/
+.venv/
+
+# uv
+uv.lock
+.uv_cache/
 
 # Environment Variables
 .env
@@ -43,6 +48,9 @@ outputs/*
 # Logs
 backend/logs/*
 !backend/logs/.gitkeep
+
+# Debug AI responses
+backend/debug_responses/
 .claude/
 # LaTeX
 *.aux
@@ -53,7 +61,6 @@ backend/logs/*
 *.fdb_latexmk
 *.synctex.gz
 
-claude.md
 
 # IDE
 .vscode/
