--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,103 +1,106 @@
-annotated-types==0.7.0
-anthropic==0.72.0
-anyio==4.11.0
-blinker==1.9.0
-blis==1.3.0
-cachetools==6.2.1
-catalogue==2.0.10
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
-cloudpathlib==0.23.0
-confection==0.1.5
-coverage==7.11.0
-cryptography==46.0.3
-cymem==2.0.11
-distro==1.9.0
-docstring_parser==0.17.0
-Flask==3.1.2
-flask-cors==6.0.1
-google-ai-generativelanguage==0.6.15
-google-api-core==2.28.1
-google-api-python-client==2.187.0
-google-auth==2.43.0
-google-auth-httplib2==0.2.1
-google-generativeai==0.8.5
-googleapis-common-protos==1.72.0
-grpcio==1.76.0
-grpcio-status==1.71.2
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.31.0
-httpx==0.28.1
-idna==3.11
-iniconfig==2.3.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.11.1
-joblib==1.5.2
-langcodes==3.5.0
-language_data==1.3.0
-lxml==6.0.2
-marisa-trie==1.3.1
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-murmurhash==1.0.13
-numpy==2.3.4
-openai==2.7.1
-ordered-set==4.1.0
-packaging==25.0
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==12.0.0
-pluggy==1.6.0
-preshed==3.0.10
-proto-plus==1.26.1
-protobuf==5.29.5
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydantic==2.12.4
-pydantic_core==2.41.5
-Pygments==2.19.2
-PyLaTeX==1.4.2
-PyMuPDF==1.26.6
-pyparsing==3.2.5
-pypdfium2==5.0.0
-pytest==8.4.2
-pytest-cov==7.0.0
-pytest-flask==1.3.0
-pytest-mock==3.15.1
-python-docx==1.2.0
-python-dotenv==1.2.1
-regex==2025.11.3
-requests==2.32.5
-rich==14.2.0
-rsa==4.9.1
-scikit-learn==1.7.2
-scipy==1.16.3
-sentence-transformers==3.3.1
-setuptools==80.9.0
-shellingham==1.5.4
-smart_open==7.4.4
-sniffio==1.3.1
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.44
-srsly==2.5.1
-thinc==8.3.7
-threadpoolctl==3.6.0
-tqdm==4.67.1
-typer==0.20.0
-typer-slim==0.20.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uritemplate==4.2.0
-urllib3==2.5.0
-wasabi==1.1.3
-weasel==0.4.2
-Werkzeug==3.1.3
-wrapt==2.0.0
-gunicorn==23.0.0
+annotated-types>=0.7.0
+anthropic>=0.72.0
+anyio>=4.11.0
+blinker>=1.9.0
+blis>=1.3.0
+cachetools>=6.2.1
+catalogue>=2.0.10
+certifi>=2025.10.5
+cffi>=2.0.0
+charset-normalizer>=3.4.4
+click>=8.3.0
+cloudpathlib>=0.23.0
+confection>=0.1.5
+coverage>=7.11.0
+cryptography>=46.0.3
+cymem>=2.0.11
+distro>=1.9.0
+docstring_parser>=0.17.0
+Flask>=3.1.2
+flask-cors>=6.0.1
+google-ai-generativelanguage>=0.6.15
+google-api-core>=2.28.1
+google-api-python-client>=2.187.0
+google-auth>=2.43.0
+google-auth-httplib2>=0.2.1
+google-genai>=1.0.0
+googleapis-common-protos>=1.72.0
+grpcio>=1.76.0
+grpcio-status>=1.71.2
+h11>=0.16.0
+httpcore>=1.0.9
+httplib2>=0.31.0
+httpx>=0.28.1
+idna>=3.11
+iniconfig>=2.3.0
+itsdangerous>=2.2.0
+Jinja2>=3.1.6
+jiter>=0.11.1
+joblib>=1.5.2
+langcodes>=3.5.0
+language_data>=1.3.0
+lxml>=6.0.2
+marisa-trie>=1.3.1
+markdown-it-py>=4.0.0
+MarkupSafe>=3.0.3
+mdurl>=0.1.2
+murmurhash>=1.0.13
+numpy>=2.3.4
+openai>=2.7.1
+ollama>=0.3.0
+groq>=0.13.0
+ruff>=0.14.5
+ordered-set>=4.1.0
+packaging>=25.0
+pdfminer.six>=20250506
+pdfplumber>=0.11.7
+pillow>=12.0.0
+pluggy>=1.6.0
+preshed>=3.0.10
+proto-plus>=1.26.1
+protobuf>=5.29.5
+pyasn1>=0.6.1
+pyasn1_modules>=0.4.2
+pycparser>=2.23
+pydantic>=2.12.4
+pydantic_core>=2.41.5
+Pygments>=2.19.2
+PyLaTeX>=1.4.2
+PyMuPDF>=1.26.6
+pyparsing>=3.2.5
+pypdfium2>=5.0.0
+pytest>=8.4.2
+pytest-cov>=7.0.0
+pytest-flask>=1.3.0
+pytest-mock>=3.15.1
+python-docx>=1.2.0
+python-dotenv>=1.2.1
+regex>=2025.11.3
+requests>=2.32.5
+rich>=14.2.0
+rsa>=4.9.1
+scikit-learn>=1.7.2
+scipy>=1.16.3
+sentence-transformers>=3.3.1
+setuptools>=80.9.0
+shellingham>=1.5.4
+smart_open>=7.4.4
+sniffio>=1.3.1
+spacy-legacy>=3.0.12
+spacy-loggers>=1.0.5
+SQLAlchemy>=2.0.44
+srsly>=2.5.1
+thinc>=8.3.7
+threadpoolctl>=3.6.0
+tqdm>=4.67.1
+typer>=0.20.0
+typer-slim>=0.20.0
+typing-inspection>=0.4.2
+typing_extensions>=4.15.0
+uritemplate>=4.2.0
+urllib3>=2.5.0
+wasabi>=1.1.3
+weasel>=0.4.2
+Werkzeug>=3.1.3
+wrapt>=2.0.0
+gunicorn>=23.0.0
